# email-triage-openenv

./: Dockerfile  README.md  app.py  baseline_results.json  inference.py  openenv.yaml  pyproject.toml
env/: __init__.py  email_fixtures.py  email_triage_env.py  models.py
graders/: __init__.py  task_graders.py
scripts/: run_baseline.py
tests/: test_env.py
