[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "An OpenEnv-compliant email triage environment for evaluating AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "graders*", "scripts*"]

[openenv]
name = "Email Triage OpenEnv"
version = "1.0.0"
tasks = ["task_easy", "task_medium", "task_hard"]
entry_point = "app:app"
inference_script = "inference.py"
